Fixed styling where words weren't wrapping. Added more content

--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -204,6 +204,10 @@ footer a:hover {
 
 /* Book Recommendations */
 
+.book-author {
+	word-break: break-word;
+}
+
 .modal-body p {
 	color: #474E5D;
 }
